<resources>
    <string name="app_name">306App</string>
    <string name="loginLabel">login:</string>
    <string name="passwordInvitation">password:</string>
    <string name="quitMess">quit</string>
    <string name="continueMess">Sign in</string>
    <string name="loginMessage">Please,enter login</string>
    <string name="passwordMess">Please,enter pass</string>
    <string name="welcome_message">Welcome to the 306App!You can choose any option suitable for you!Have a nice day!</string>
    <string name="buttonBreadService">Bread</string>
    <string name="buttonGarbage">Garbage</string>
    <string name="testURLs">TestNetworking</string>
    <string name="loadFromFile">Load</string>
    <string name="testSockets">TestConnection</string>
    <string name="Server1">Server Responce</string>
    <string name="SendButton1">Send</string>
    <string name="Submit">submit</string>
    <string name="Manage_306Tasks">306Tasks</string>
    <string name="Next_to_buy_bread">Next_to_buy_bread</string>
    <string name="Next_to_garbage">Next_to_garbage</string>
    <string name="Garbage">View garbage history</string>
    <string name="Bread">View bread history</string>
    <string name="Alex">Alex</string>
    <string name="Chat">open chat</string>
    <string name="Buy_bread">Buy bread</string>
    <string name="Take_the_garbage_out">Take out</string>
    <string name="Registration">Sign up</string>
    <string name="Name">name:</string>
    <string name="Surname">surname</string>
    <string name="password">confirm password:</string>
    <string name="BreadHistory">show bread history</string>
    <string name="GarbageHistory">show garbage history</string>
    <string name="CreateGroup">Create group</string>
    <string name="OpenChat">Open chat</string>
    <string name="title_activity_create_update_group">CreateUpdateGroupActivity</string>
    <string name="GroupCreation">Create a group!</string>
    <string name="AddParticipants">Add new participants to your group!</string>
    <string name="AddP">add</string>
    <string name="DeleteGroup">delete group</string>
    <string name="QuitFromGroup">quit from group</string>
    <string name="Open_conversations">Open conversations</string>
    <string name="CheckBoxStaySigned">Stay signed in?</string>
    <string name="BackToLoginWindow">Back to login</string>
</resources>
