<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fadingEdge="none"
        android:requiresFadingEdge="none"
        android:stretchColumns="1"
        tools:context="com.applications.a306app.activities.TasksActivity">

        <Button
            android:id="@+id/ShowGarbageHistoryButton"
            android:layout_width="201dp"
            android:layout_height="46dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/GarbageHistory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/garbageRecyclerView"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/garbage"
            android:layout_width="127dp"
            android:layout_height="29dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"


            android:text="@string/buttonGarbage"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showBreadHistoryButton"
            tools:text="@string/buttonGarbage" />

        <TextView
            android:id="@+id/bread"
            android:layout_width="127dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonBreadService"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"


            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isInGroupTextView" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <Button
            android:id="@+id/BuyBreadButton"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Buy_bread"
            app:layout_constraintEnd_toStartOf="@+id/showBreadHistoryButton"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breadRecyclerView"
            tools:text="@string/Buy_bread" />

        <Button
            android:id="@+id/showBreadHistoryButton"
            android:layout_width="205dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/BreadHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breadRecyclerView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/breadRecyclerView"
            android:layout_width="368dp"
            android:layout_height="146dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bread" />

        <Button
            android:id="@+id/TakeGarbageOutButton"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Take_the_garbage_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ShowGarbageHistoryButton"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/garbageRecyclerView"
            app:layout_constraintVertical_bias="0.333" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/garbageRecyclerView"
            android:layout_width="368dp"
            android:layout_height="151dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/garbage" />

        <TextView
            android:id="@+id/isInGroupTextView"
            android:layout_width="344dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />
</android.support.v4.widget.DrawerLayout>